# LLM-MCP

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  ai-gateway-structure.md  demo_routing.py  deploy.sh  enable_apis.sh  env.example  main.py  medium.txt  next_steps.md  overview.md  pyproject.toml  requirements.txt  server.py  set_env.sh  setup_gcp.sh  simple_test.py  test_server.py
adk_agent/: __init__.py  agent.py
config/: models.yaml  pricing.yaml
deployment/: README.md  deploy.sh
docs/: architecture.md
gateway/: __init__.py  cache.py  cost_tracker.py  metrics.py  rate_limiter.py  router.py
scripts/: load_test.py
setup/: README.md  create_project.sh
src/: __init__.py
src/llm_mcp/: __init__.py
src/llm_mcp/agents/: README.md  __init__.py  requirements.txt
src/llm_mcp/gateway/: __init__.py  cost_tracker.py  metrics.py
src/llm_mcp/server/: __init__.py  server.py
src/llm_mcp/utils/: __init__.py
tests/: __init__.py  test_gateway.py
