[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-mcp"
version = "1.0.0"
description = "Production-ready Multi-Provider AI Gateway MCP Server with intelligent routing and caching"
requires-python = ">=3.11"
dependencies = [
    "fastmcp",
    "pydantic",
    "python-dotenv",
    "aiohttp",
    "asyncio",
    "typing-extensions"
]
authors = [
    {name = "LLM MCP Team"}
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "black",
    "ruff",
    "mypy"
]

[project.scripts]
llm-mcp = "llm_mcp.server.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
